--- a/app.html
+++ b/app.html
@@ -11,7 +11,12 @@
     </head>
     <body>
      <h1>Team-Css Thor</h1>
-        
+        <style>
+            .body{
+              backgroundcolor="red";  
+            }
+            
+        </style>
         <script src="" async defer></script>
     </body>
 </html>
