--- a/thor.html
+++ b/thor.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="thor.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="thor.css">
   </head>
   <body>
    
-
+<!-- //navbar -->
     <div id="mynav">
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -23,13 +24,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#section1">Home</a>
+                <a class="nav-link" aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#section5">Services</a>
+                <a class="nav-link" href="#recent">Recent</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#section4">Contact</a>
+                <a class="nav-link" href="#services">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -39,38 +46,33 @@
         </div>
       </nav>
     </div>
-      
+ <!-- //navbar ends      -->
 <br>
 
+/*
+<!-- /landing page --> -->
 <div id="home">
-  <section class="text-gray-600 body-font">
-    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-        <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
-      </div>
-      <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Lorem ipsum dolor sit.
-          <br class="hidden lg:inline-block">Lorem, ipsum.
-        </h1>
-        <p class="mb-8 leading-relaxed">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro explicabo similique, possimus dolores alias voluptatum harum voluptatibus, beatae error nostrum consectetur itaque. Ab!</p>
-        <div class="flex justify-center">
-          <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg" wfd-id="144">Click To Scroll
-          </button>
-          <!-- <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg" wfd-id="143">Button</button> -->
-        </div>
-      </div>
-    </div>
-  </section>
+
+  <div class="landingtext">
+    <h1 id="h-header">Welcome to VCH Hospital</h1>
+    <p id="h-footer">Complete Care for You and Your Family..!!</p>
+  </div>
+
+  <video id="videoBG" poster="poster.JPG" autoplay muted loop>
+    <source src="bg.mp4" type="video/mp4">
+</video>
+
 </div>
 
-
+<!-- <landing page ends -->
 
 <br>
 
 
 
-
-<div id="services">
+ <!-- //recent  --> -->
+<div id="recent">
+  <h1> Recent News</h1>
   <section class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap -m-4">
@@ -168,7 +170,9 @@
 <br>
 
 
+<!-- //Services -->
 <div id="services">
+  <h1>Services</h1>
   <section class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap -m-4">
@@ -258,7 +262,10 @@
 </div>
 
 
+
+<!-- //contact -->
 <div id="contact">
+  <h1>Contact</h1>
   <section class="text-gray-600 body-font relative">
     <div class="absolute inset-0 bg-gray-300">
       <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map" scrolling="no" src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=%C4%B0zmir+(My%20Business%20Name)&ie=UTF8&t=&z=14&iwloc=B&output=embed" style="filter: grayscale(1) contrast(1.2) opacity(0.4);"></iframe>
@@ -282,7 +289,9 @@
   </section>
 </div>
 
-<div id="avout">
+
+<!-- //about <section></section> -->
+<div id="about">
   <footer class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
       <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
