--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#recent">Corona Meter</a>
+                <a class="nav-link" href="#recent">Recent News</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#services">Our Services</a>
@@ -72,7 +72,7 @@
 
  <!-- //recent  --> -->
 <div id="recent">
-  <div class="reno"><h1> CORONA METER</h1></div>
+  <div class="reno"><h1>Recent News</h1></div>
   <section class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap -m-4">
